--- a/style.css
+++ b/style.css
@@ -70,3 +70,29 @@ button {
 .finish button {
   text-align: center;
 }
+
+label,
+textarea {
+  font-size: 0.8rem;
+  letter-spacing: 1px;
+  justify-content:  space-around;
+}
+
+textarea {
+  padding: 10px;
+  max-width: 100%;
+  line-height: 1.5;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  box-shadow: 1px 1px 1px #999;
+}
+.scoreTable{/*table do score, tela inicial*/
+  background-color: rgb(16, 15, 15);
+  margin-top: auto;
+  justify-content: center;
+ white-space: 200px; 
+}
+
+main{
+  color: green;
+}
