--- a/style.css
+++ b/style.css
@@ -1,10 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'poppins', sans-serif;
+}
+
+.header{
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.Logo{
+  width: 70px;
+  margin-right: 10px;
 }
 
 body {
@@ -14,11 +25,72 @@ body {
   justify-content: center;
   flex-direction: column;
   gap: 5px;
-  background: linear-gradient(90deg, rgba(91,30,159,1) 0%, rgba(77,39,182,1) 100%);
+  font-family: "Press Start 2P", system-ui;
+  background-color: #1A1A1D; 
+  color: #EFBC9C;
+
+  /* Projetinho para implementação (Cursor personalizado em Pixel Art)*/
+  cursor: url('cursor-pixel.png'), auto; 
+  padding: 20px; /* Adiciona espaçamento nas bordas da tela */
 }
 
-body h2 {
+.scoreindex{
+  display: flex;
+  text-align: center;/* Centraliza horizontalmente */
+  justify-content: center;
+  margin-bottom: 20px;/* Adciona espaço abaixo da `.scoreindex` */
+  width: 100%;/* Garante que o elemento ocupe toda a largura disponível */
+  max-width: 600px; /* Define uma largura máxima */
+}
+
+.buttons {
   color: white;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 20px;/*Adciona espaço acima do botão 'play'*/
+  width: 100%; /* Garante que o elemento ocupe toda a largura disponível */
+  max-width: 600px; /* Define uma largura máxima */
+}
+
+.main-text {
+  margin: 20px 0;
+  font-size: 24px;
+}
+
+body h1{
+  color: #FC273C;
+  font-size: 24px;
+  font-weight: 400;
+  font-style: normal;
+  margin-top: 20px;
+}
+
+.container{
+  text-align: center;
+  padding: 20px;
+  border: 2px solid #FC273C; 
+  border-radius: 10px;
+  width: 80%;
+  max-width: 600px;
+  background-color: #141414;
+}
+
+
+.btn {
+  background-color: #FC273C;
+  color: #fff;
+  border: none;
+  text-align: center;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.btn:hover {
+  background-color: #FC273C;
+  box-shadow: 0 0 5px #5e030c, 0 0 10px #df172b;
 }
 
 main {
@@ -42,6 +114,11 @@ main {
 
 .spnQtd {
   text-align: end;
+  color:#5e030c;
+}
+
+.questoes{
+  color: #1A1A1D;
 }
 
 .answers {
@@ -50,23 +127,48 @@ main {
   gap: 5px;
 }
 
+.answers:hover{
+  background-color: #FC273C;
+  box-shadow: 0 0 5px #5e030c, 0 0 10px #df172b;
+}
+
 button {
   width: 100%;
   text-align: start;
-  padding: 5px;
+  padding: 25px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  background-color: #008CCC;
+  background-color: #FC273C;
   color: white;
+  font-family: "Press Start 2P", system-ui;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .finish {
   display: none;
   flex-direction: column;
   gap: 10px;
+  color:#df172b;
 }
 
 .finish button {
   text-align: center;
+}
+
+footer{
+  background-color: #141414;
+  color: #EFBC9C;
+  text-align: center;
+  padding: 10px 0;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  font-size: 12px;
+  border-top: 2px solid #FC273C;
+}
+
+footer p{
+  margin: 0;
 }
